rust/dbn-macros/tests/ui/json_serialize_conflicting_dbn_attr.rs
use dbn_macros::JsonSerialize;

#[derive(JsonSerialize)]
#[repr(C)]
struct Record {
    #[dbn(fixed_price, unix_nanos)]
    pub a: u8,
}

fn main() {}
